--- a/projects/demo-app/src/index.html
+++ b/projects/demo-app/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>DemoApp</title>
   <base href="/">
-
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.4/quill.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
